ToolBag/ParseTool/src/parsetool/viewmodel/ViewModelParser.java
// Generated from D:\workspace\20140311\ToolBag\ParseTool\src\parsetool\viewmodel\ViewModel.g4 by ANTLR 4.1
package parsetool.viewmodel;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ViewModelParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__46=1, T__45=2, T__44=3, T__43=4, T__42=5, T__41=6, T__40=7, T__39=8, 
		T__38=9, T__37=10, T__36=11, T__35=12, T__34=13, T__33=14, T__32=15, T__31=16, 
		T__30=17, T__29=18, T__28=19, T__27=20, T__26=21, T__25=22, T__24=23, 
		T__23=24, T__22=25, T__21=26, T__20=27, T__19=28, T__18=29, T__17=30, 
		T__16=31, T__15=32, T__14=33, T__13=34, T__12=35, T__11=36, T__10=37, 
		T__9=38, T__8=39, T__7=40, T__6=41, T__5=42, T__4=43, T__3=44, T__2=45, 
		T__1=46, T__0=47, BOOL_LITERAL=48, IDENTIFIER=49, CHARACTER_LITERAL=50, 
		STRING_LITERAL=51, HEX_LITERAL=52, DECIMAL_LITERAL=53, OCTAL_LITERAL=54, 
		FLOATING_POINT_LITERAL=55, WS=56, COMMENT=57, LINE_COMMENT=58, LINE_COMMAND=59;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "'<<='", "'&'", "'-='", "','", "'*'", "'-'", "'<=='", 
		"'['", "':'", "'==>'", "'('", "'&='", "'--'", "'<'", "'!='", "'<='", "'?'", 
		"'<<'", "'>>='", "'{'", "'+='", "'^='", "'}'", "'++'", "'>>'", "'%'", 
		"'^'", "'*='", "'.'", "')'", "'+'", "'='", "';'", "'&&'", "'||'", "'>'", 
		"'%='", "'/='", "'|='", "'/'", "'=='", "'~'", "'class'", "'>='", "'|'", 
		"'!'", "BOOL_LITERAL", "IDENTIFIER", "CHARACTER_LITERAL", "STRING_LITERAL", 
		"HEX_LITERAL", "DECIMAL_LITERAL", "OCTAL_LITERAL", "FLOATING_POINT_LITERAL", 
		"WS", "COMMENT", "LINE_COMMENT", "LINE_COMMAND"
	};
	public static final int
		RULE_program = 0, RULE_model = 1, RULE_model_name = 2, RULE_model_area = 3, 
		RULE_state = 4, RULE_push = 5, RULE_pull = 6, RULE_field = 7, RULE_declare = 8, 
		RULE_variable_name = 9, RULE_option_list = 10, RULE_option = 11, RULE_option_name = 12, 
		RULE_option_value = 13, RULE_attribute = 14, RULE_attribute_name = 15, 
		RULE_attribute_value = 16, RULE_statement = 17, RULE_declare_statement = 18, 
		RULE_argument_expression_list = 19, RULE_additive_expression = 20, RULE_additive_expression_operator = 21, 
		RULE_multiplicative_expression = 22, RULE_multiplicative_expression_operator = 23, 
		RULE_cast_expression = 24, RULE_unary_expression = 25, RULE_unary_expression_one_char = 26, 
		RULE_unary_expression_two_char = 27, RULE_unary_expression_operator = 28, 
		RULE_postfix_expression = 29, RULE_postfix_part = 30, RULE_postfix_part_index = 31, 
		RULE_postfix_part_empty_function = 32, RULE_postfix_part_function = 33, 
		RULE_postfix_part_long_name = 34, RULE_postfix_part_increase = 35, RULE_postfix_part_decrease = 36, 
		RULE_unary_operator = 37, RULE_primary_expression = 38, RULE_constant = 39, 
		RULE_expression = 40, RULE_constant_expression = 41, RULE_assignment_expression = 42, 
		RULE_lvalue = 43, RULE_assignment_operator = 44, RULE_conditional_expression = 45, 
		RULE_logical_or_expression = 46, RULE_logical_and_expression = 47, RULE_inclusive_or_expression = 48, 
		RULE_exclusive_or_expression = 49, RULE_and_expression = 50, RULE_equality_expression = 51, 
		RULE_equality_expression_operator = 52, RULE_relational_expression = 53, 
		RULE_relational_expression_operator = 54, RULE_shift_expression = 55, 
		RULE_shift_expression_operator = 56, RULE_type_name = 57;
	public static final String[] ruleNames = {
		"program", "model", "model_name", "model_area", "state", "push", "pull", 
		"field", "declare", "variable_name", "option_list", "option", "option_name", 
		"option_value", "attribute", "attribute_name", "attribute_value", "statement", 
		"declare_statement", "argument_expression_list", "additive_expression", 
		"additive_expression_operator", "multiplicative_expression", "multiplicative_expression_operator", 
		"cast_expression", "unary_expression", "unary_expression_one_char", "unary_expression_two_char", 
		"unary_expression_operator", "postfix_expression", "postfix_part", "postfix_part_index", 
		"postfix_part_empty_function", "postfix_part_function", "postfix_part_long_name", 
		"postfix_part_increase", "postfix_part_decrease", "unary_operator", "primary_expression", 
		"constant", "expression", "constant_expression", "assignment_expression", 
		"lvalue", "assignment_operator", "conditional_expression", "logical_or_expression", 
		"logical_and_expression", "inclusive_or_expression", "exclusive_or_expression", 
		"and_expression", "equality_expression", "equality_expression_operator", 
		"relational_expression", "relational_expression_operator", "shift_expression", 
		"shift_expression_operator", "type_name"
	};

	@Override
	public String getGrammarFileName() { return "ViewModel.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public ViewModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ModelContext model(int i) {
			return getRuleContext(ModelContext.class,i);
		}
		public List<ModelContext> model() {
			return getRuleContexts(ModelContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(116); model();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelContext extends ParserRuleContext {
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public Model_areaContext model_area() {
			return getRuleContext(Model_areaContext.class,0);
		}
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public StateContext state() {
			return getRuleContext(StateContext.class,0);
		}
		public Model_nameContext model_name() {
			return getRuleContext(Model_nameContext.class,0);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); model_area();
			setState(123); match(10);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==9) {
				{
				{
				setState(124); attribute();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130); match(44);
			setState(131); model_name();
			setState(132); match(21);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(133); field();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139); match(24);
			setState(140); state();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Model_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ViewModelParser.IDENTIFIER, 0); }
		public Model_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterModel_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitModel_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitModel_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Model_nameContext model_name() throws RecognitionException {
		Model_nameContext _localctx = new Model_nameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_model_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Model_areaContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ViewModelParser.IDENTIFIER, 0); }
		public Model_areaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model_area; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterModel_area(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitModel_area(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitModel_area(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Model_areaContext model_area() throws RecognitionException {
		Model_areaContext _localctx = new Model_areaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_model_area);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitState(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_state);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(146); statement();
					}
					} 
				}
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PushContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StateContext state() {
			return getRuleContext(StateContext.class,0);
		}
		public PushContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_push; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterPush(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitPush(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitPush(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PushContext push() throws RecognitionException {
		PushContext _localctx = new PushContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_push);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); expression();
			setState(153); match(11);
			setState(154); match(21);
			setState(155); state();
			setState(156); match(24);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PullContext extends ParserRuleContext {
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PullContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pull; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterPull(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitPull(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitPull(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PullContext pull() throws RecognitionException {
		PullContext _localctx = new PullContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pull);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158); lvalue();
			setState(159); match(8);
			setState(160); expression();
			setState(161); match(34);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public DeclareContext declare() {
			return getRuleContext(DeclareContext.class,0);
		}
		public Option_listContext option_list() {
			return getRuleContext(Option_listContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163); declare();
			setState(165);
			_la = _input.LA(1);
			if (_la==21) {
				{
				setState(164); option_list();
				}
			}

			setState(167); match(34);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareContext extends ParserRuleContext {
		public Type_nameContext type_name() {
			return getRuleContext(Type_nameContext.class,0);
		}
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitDeclare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitDeclare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareContext declare() throws RecognitionException {
		DeclareContext _localctx = new DeclareContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169); type_name();
			setState(170); variable_name();
			setState(173);
			_la = _input.LA(1);
			if (_la==33) {
				{
				setState(171); match(33);
				setState(172); expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ViewModelParser.IDENTIFIER, 0); }
		public Variable_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterVariable_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitVariable_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitVariable_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_nameContext variable_name() throws RecognitionException {
		Variable_nameContext _localctx = new Variable_nameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variable_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Option_listContext extends ParserRuleContext {
		public List<OptionContext> option() {
			return getRuleContexts(OptionContext.class);
		}
		public OptionContext option(int i) {
			return getRuleContext(OptionContext.class,i);
		}
		public Option_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_option_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterOption_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitOption_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitOption_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Option_listContext option_list() throws RecognitionException {
		Option_listContext _localctx = new Option_listContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_option_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177); match(21);
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(178); option();
				}
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(184); match(24);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionContext extends ParserRuleContext {
		public Option_valueContext option_value() {
			return getRuleContext(Option_valueContext.class,0);
		}
		public Option_nameContext option_name() {
			return getRuleContext(Option_nameContext.class,0);
		}
		public OptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_option; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitOption(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionContext option() throws RecognitionException {
		OptionContext _localctx = new OptionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_option);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186); option_name();
			setState(187); match(33);
			setState(188); option_value();
			setState(190);
			_la = _input.LA(1);
			if (_la==5) {
				{
				setState(189); match(5);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Option_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ViewModelParser.IDENTIFIER, 0); }
		public Option_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_option_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).enterOption_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewModelListener ) ((ViewModelListener)listener).exitOption_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ViewModelVisitor ) return ((ViewModelVisitor<? extends T>)visitor).visitOption_name(this);
			else return visitor.visitChildren(this);
		}
	}
